// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"plugins" option should throw an error on the unresolved plugin: errors 1`] = `
Array [
  "ModuleError: Module Error (from \`replaced original path\`):
Loading PostCSS \\"postcss-unresolved\\" plugin failed: Cannot find module 'postcss-unresolved' from 'src/utils.js'",
]
`;

exports[`"plugins" option should throw an error on the unresolved plugin: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value and not throw an error on falsy plugin: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value and not throw an error on falsy plugin: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value and override the previous plugin options: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  border-top-color: blue;
  border-right-color: blue;
  border-left-color: blue;
  background-color: #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with "Array" value and override the previous plugin options: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value and override the previous plugin options: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value and support disabling plugins from the configuration: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with "Array" value and support disabling plugins from the configuration: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value and support disabling plugins from the configuration: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value, and config, and override the previous plugin options: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  border-top-color: blue;
  border-right-color: blue;
  border-left-color: blue;
  background-color: #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with "Array" value, and config, and override the previous plugin options: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value, and config, and override the previous plugin options: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value: css 1`] = `
"a {
  color: rgba(0, 0, 0, 1.0);
}

a {
  color: rgba(255, 0, 0, 1.0);
}

a {
  color: rgba(0, 255, 0, 1.0);
}

a {
  color: rgba(0, 0, 255, 1.0);
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  border-top-color: rgba(0, 0, 255, 1.0);
  border-right-color: rgba(0, 0, 255, 1.0);
  border-left-color: rgba(0, 0, 255, 1.0);
  background-color: #fafafa;
}

.phone_title {
    width: 500px;
  }

@media (max-width: 500px) {

.phone_title {
      width: auto
  }
    }

body.is_dark .phone_title {
      color: rgba(0, 0, 0, 0);
    }

.phone img {
    display: block;
  }
"
`;

exports[`"plugins" option should work with "Array" value: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Array" value: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value and only disabled plugins: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with "Object" value and only disabled plugins: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value and only disabled plugins: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value and override the previous plugin options: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  border-top-color: blue;
  border-right-color: blue;
  border-left-color: blue;
  background-color: #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with "Object" value and override the previous plugin options: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value and override the previous plugin options: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value and support disabling plugins from the configuration: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with "Object" value and support disabling plugins from the configuration: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value and support disabling plugins from the configuration: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value, and config, and override the previous plugin options: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  border-top-color: blue;
  border-right-color: blue;
  border-left-color: blue;
  background-color: #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with "Object" value, and config, and override the previous plugin options: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value, and config, and override the previous plugin options: warnings 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: rgba(0, 0, 255, 1.0);
}

.class {
  border-top-color: rgba(0, 0, 255, 1.0);
  border-right-color: rgba(0, 0, 255, 1.0);
  border-left-color: rgba(0, 0, 255, 1.0);
  background-color: #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone_title {
    width: 500px;
  }

@media (max-width: 500px) {

.phone_title {
      width: auto
  }
    }

body.is_dark .phone_title {
      color: white;
    }

.phone img {
    display: block;
  }
"
`;

exports[`"plugins" option should work with "Object" value: errors 1`] = `Array []`;

exports[`"plugins" option should work with "Object" value: warnings 1`] = `Array []`;

exports[`"plugins" option should work with empty "Array" value: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with empty "Array" value: errors 1`] = `Array []`;

exports[`"plugins" option should work with empty "Array" value: warnings 1`] = `Array []`;

exports[`"plugins" option should work with empty "Object" value: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with empty "Object" value: errors 1`] = `Array []`;

exports[`"plugins" option should work with empty "Object" value: warnings 1`] = `Array []`;

exports[`"plugins" option should work with the "default" property with options: css 1`] = `
"a {
  color: black;
}

a {
  color: rgba(0, 0, 255, 0.5);
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with the "default" property with options: errors 1`] = `Array []`;

exports[`"plugins" option should work with the "default" property with options: warnings 1`] = `Array []`;

exports[`"plugins" option should work with the "default" property without options: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: rgba(0, 0, 255, 1.0);
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`"plugins" option should work with the "default" property without options: errors 1`] = `Array []`;

exports[`"plugins" option should work with the "default" property without options: warnings 1`] = `Array []`;
